dat.gui clouds rotation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			{
 				"imports": {
 					"three": "https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.module.js",
-          "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161.0/examples/jsm/"
+          "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161.0/examples/jsm/",
+          "dat.gui": "https://cdn.jsdelivr.net/npm/dat.gui/build/dat.gui.module.js"
         }
 			}
 		</script>
