--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <div id="description">A 3D visualization of Earth with day and night textures, cloud layers, and a glowing atmosphere.</div>
     </div>
     <div id="created-by">Created by beagas</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="main.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
