--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <div id="description">A 3D visualization of Earth with day and night textures, cloud layers, and a glowing atmosphere.</div>
     </div>
     <div id="created-by">Created by beagas</div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="main.js"></script>
+    <!-- Add this in your HTML head or before the main.js script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
